# PicoDrone

CAD/: bottom.stl  end_legs2.stl  top.stl
Pico_C/: CMakeLists.txt  LCD_2in_test.c  LED.c  README.txt  barometer.c  barometer.h  camera.c  camera.h  coords.h  ew.c  frame_test.c  frame_test.h  internal_temp.c  ov5642_regs.h  run_motors.c  run_motors.h  screen.c  screen.h  t_image.h  t_image_8.h  vga_out.c  waveshare_frame.c  waveshare_frame.h
Pico_C/lib/3D/: CMakeLists.txt  conv565.h  gfx3d.h  got.h  models3d.h  pat2.h
Pico_C/lib/GUI/: GUI_Paint.c  GUI_Paint.h
Pico_C/log/: CMakeLists.txt  dep.cpp  log.cpp  open.bat  serialib.h  to888.h
Pico_C/utilities/: Img2Raw.java  JPEGtoH.java  Obj2h.java  README.txt  img2raw16.java  jpeg2h.py  log.py
Pico_Python/: MotorsTest.py  OV5642_regs.py  barometer_test.py  cam2.py  cameraTest.py  main.py  motortest.py  temp_sense_test.py
